...
        String.valueOf()-->

<!-- The @={} notation, which importantly includes the "=" sign, receives data changes to
the property and listen to user updates at the same time.-->

        <TextView
            android:id="@+id/coordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{@string/location(viewModel.latLng.latitude,viewModel.latLng.longitude)}"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectLocation" />

        <EditText
            android:id="@+id/reminderTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reminder_title"
            android:text="@={viewModel.reminderTitle}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reminderDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/reminder_desc"
            android:lines="10"
            android:text="@={viewModel.reminderDescription}"
...
            android:text="@string/reminder_location"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reminderDescription" />

        <TextView
            android:id="@+id/selectedLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:text="@={viewModel.cityNameForTwoWayBinding}"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@id/selectLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/selectLocation"
            tools:text="Location" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveReminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:layout_marginBottom="76dp"
            android:fadeVisible="@{!viewModel.showLoading.booleanValue()}"
            android:src="@drawable/ic_save"
...
