...
        <!--TODO: add the design of the reminder details-->

        <!--Update fragment tag: https://stackoverflow.com/questions/58703451/fragmentcontainerview-as-navhostfragment
        app:navGraph="@navigation/nav_graph_detail" -->

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{reminderDataItem.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458"
...
